# cellseg3d

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
src/: config.yaml  lif_3d_cells.py
src/cellseg3d/: cli.py  features.py  io_lif.py  segmentation.py  settings.py  viz.py
src/cellseg3d/core/: debug.py  types.py
src/cellseg3d/feat/: centroids.py
src/cellseg3d/io/: lif_reader.py
src/cellseg3d/pipeline/: run.py
src/cellseg3d/seg/: segmenter.py
src/cellseg3d/viz/: registry.py  viewer.py
