[project]
name = "cellseg3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "napari[all]>=0.6.4",
    "pandas>=2.3.2",
    "pydantic-settings>=2.10.1",
    "readlif>=0.6.6",
    "scikit-image>=0.25.2",
]
